--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,6 @@ migrate_working_dir/
 .flutter-plugins-dependencies
 .pub-cache/
 .pub/
-/build/
 
 # Symbolication related
 app.*.symbols
@@ -44,3 +43,9 @@ app.*.map.json
 
 .env
 .vscode
+
+# Remove build folder
+build/*
+
+# adicionar a pasta build do web anteriormente excluída
+!build/web
