--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   flutter_form_builder: ^9.3.0
   flutter_localization: ^0.2.0
   form_builder_validators: ^10.0.1
+  flutter_native_splash: ^2.2.19
+  flutter_launcher_icons: "^0.13.1"
 
 dev_dependencies:
   flutter_test:
@@ -52,6 +54,34 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
+
+
+# flutter pub run flutter_launcher_icons -f icon
+# flutter pub run flutter_launcher_icons
+flutter_launcher_icons:
+  android: "icon"
+  image_path: assets/logos/Logo_1240_Dark.png
+  min_sdk_android: 21 
+  web:
+    generate: true
+    image_path: assets/logos/Logo_1240_Dark.png
+
+# flutter pub run flutter_native_splash:create  
+flutter_native_splash:
+  image: assets/logos/Logo_1240_light.png
+  image_dark: assets/logos/Logo_1240_Dark.png
+  color: "#ffffff"
+  color_dark: "#000000"
+  android: true
+  web: true
+
+  android_12:
+    image: assets/logos/Logo_1240_light.png
+    image_dark: assets/logos/Logo_1240_Dark.png
+    color: "#ffffff"
+    icon_background_color: "#ffffff"
+    color_dark: "#000000"
+    icon_background_color_dark: "#000000"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -65,9 +95,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/logos/Logo_1240_Dark.png
+    - assets/logos/Logo_1240_light.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
